--- a/src/scss/_capa.scss
+++ b/src/scss/_capa.scss
@@ -23,6 +23,7 @@ section.capa{
 			font-weight: bold;
 			font-size: .85rem;
 			margin-top: 1rem;
+			transition: all .5s;
 
 			&.verde{
 				background-color: #1db954;
